--- a/template/2/index.html
+++ b/template/2/index.html
@@ -13,6 +13,7 @@
       /* background: #F6F6F6; */
       margin: 0px;
       font-family: Roboto;
+      font-weight: 400;
     }
     .container {
       max-width: 1000px;
@@ -97,24 +98,24 @@
               <table style="width:100%">
                 <thead>
                   <tr>
-                    <th style="text-align: left; padding: 8px">Plan</th>
-                    <th style="text-align: left; padding: 8px">Precio</th>
+                    <th style="text-align: left; border-bottom: 2px solid #000000; padding: 8px">Plan</th>
+                    <th style="text-align: left; border-bottom: 2px solid #000000; padding: 8px">Precio</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td style="width: 75%; border-top: 2px solid #000000; padding: 8px">
+                    <td style="width: 75%; padding: 8px">
                       Plan E- Commerce Integrado
                     </td>
-                    <td style="width: 25%; border-top: 2px solid #000000; padding: 8px">
+                    <td style="width: 25%; padding: 8px">
                       $ 45
                     </td>
                   </tr>
                   <tr>
-                    <td style="width: 75%; border-top: 2px solid #000000; padding: 8px">
+                    <td style="width: 75%; padding: 8px">
                       Plan E- Commerce Integrado
                     </td>
-                    <td style="width: 25%; border-top: 2px solid #000000; padding: 8px">
+                    <td style="width: 25%; padding: 8px">
                       $ 45
                     </td>
                   </tr>
